V17: Title Subheadings, alignment fixes for Weight, Insurance, Driver Boxes

--- a/style.css
+++ b/style.css
@@ -413,7 +413,7 @@ button:hover {
 
 .formGrouping {
   display:  flex;
-  justify-content: space-between;
+flex-direction: column;
   gap:16px;
 }
 
